--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -7,13 +7,6 @@
 		"target": "es6",
 		"allowSyntheticDefaultImports": true,
 		"noEmit": true,
-		"experimentalDecorators": true
-	},
-	"include": [
-	  "src/**/*"
-	],
-	"exclude": [
-	  "esm",
-	  "node_modules"
-	]
+		"experimentalDecorators": true,
+	}
 }
