try prepare script to build 'sdk' on git install

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -25,6 +25,8 @@
   "scripts": {
     "clean": "del-cli esm",
     "build": "rollup -c",
-    "test": "jest"
-  }
+    "test": "jest",
+    "prepare": "rollup -c"
+  },
+
 }
