yarn supports fewer script hooks

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -26,6 +26,6 @@
     "clean": "del-cli esm",
     "build": "rollup -c",
     "test": "jest",
-    "prepare": "rollup -c"
+    "prepack": "yarn build"
   }
 }
